@@ -6,11 +6,61 @@ apply plugin: 'java'
 apply plugin: 'idea'
 
 group = 'io.crate'
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+
+ext {
+    // crate
+    crateClientVersion="0.54.8"
+
+    // mesos
+    mesosVersion="0.28.0"
+    minimesosVersion = "0.9.0"
+    awaitilityVersion = "1.7.0"
+
+    // testing
+    junitVersion="4.12"
+    mockitoVersion="1.10.19"
+    hamcrestAllVersion="1.3"
+
+    // jersey
+    jerseyContainerGrizzly2Version="2.16"
+    jerseyMediaJsonJackson="2.16"
+
+    // apache
+    apacheHttpClientVersion="4.4"
+    apacheCommonIOVersion="1.3.2"
+
+    // utils
+    log4jVersion="1.7.12"
+    jetbrainsAnnotationsVersion="13.0"
+    jcommanderVersion="1.30"
+    guavaVersion="0.19.0"
+}
 
 repositories {
     jcenter()
+    maven { url "https://jitpack.io" }
+}
+
+dependencies {
+    compile "com.jayway.awaitility:awaitility:$awaitilityVersion"
+    compile "org.apache.mesos:mesos:$mesosVersion"
+    compile "com.github.ContainerSolutions:minimesos:$minimesosVersion"
+    compile "org.glassfish.jersey.containers:jersey-container-grizzly2-http:$jerseyContainerGrizzly2Version"
+    compile "org.glassfish.jersey.media:jersey-media-json-jackson:$jerseyMediaJsonJackson"
+    compile "com.google.guava:guava:$guavaVersion"
+    compile "com.beust:jcommander:$jcommanderVersion"
+    compile "org.jetbrains:annotations:$jetbrainsAnnotationsVersion"
+    compile "io.crate:crate-client:$crateClientVersion"
+    compile "org.slf4j:slf4j-log4j12:$log4jVersion"
+    compile "org.apache.httpcomponents:httpclient:$apacheHttpClientVersion"
+    compile "org.apache.commons:commons-io:$apacheCommonIOVersion"
+    testCompile "org.hamcrest:hamcrest-all:$hamcrestAllVersion"
+    testCompile ("junit:junit:$junitVersion") {
+        exclude group: 'org.hamcrest', module: 'hamcrest-core'
+    }
+    testCompile ("org.mockito:mockito-core:$mockitoVersion") {
+        exclude group: 'org.hamcrest', module: 'hamcrest-core'
+    }
 }
 
 test {
@@ -27,7 +77,7 @@ task getVersion (dependsOn: 'classes') << {
         main = 'io.crate.frameworks.mesos.Version'
         standardOutput = stdout
     }
-    
+
     ext.gitTag = "git describe".execute().in.text.trim()
     ext.version = stdout.toString().trim().split(" ")[1].replace(',','').trim()
 
@@ -37,7 +87,7 @@ task getVersion (dependsOn: 'classes') << {
 	assert version.endsWith("-SNAPSHOT"), "Version conflict: version does not end with -SNAPSHOT"
 	version = version + "-" + "git rev-parse --short HEAD".execute().in.text.trim()
     }
-    
+
     logger.quiet("----------------------------")
     logger.quiet(" gitTag:  " + gitTag)
     logger.quiet(" version: " + version)
@@ -74,31 +124,11 @@ fatJarPrepareFiles {
     exclude 'META-INF/*.RSA', 'META-INF/*.SF','META-INF/*.DSA'
 }
 
-dependencies {
-    compile 'org.glassfish.jersey.containers:jersey-container-grizzly2-http:2.16'
-    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.16'
-    compile 'org.apache.mesos:mesos:0.21.1'
-    compile 'com.google.guava:guava:18.0'
-    compile 'com.beust:jcommander:1.30'
-    compile 'org.jetbrains:annotations:13.0'
-    compile 'io.crate:crate-client:0.47.7'
-    compile 'org.slf4j:slf4j-log4j12:1.7.12'
-    compile 'org.apache.httpcomponents:httpclient:4.4'
-    compile 'org.apache.commons:commons-io:1.3.2'
-    testCompile 'org.hamcrest:hamcrest-all:1.3'
-    testCompile ('junit:junit:4.11') {
-        exclude group: 'org.hamcrest', module: 'hamcrest-core'
-    }
-    testCompile ("org.mockito:mockito-core:1.10.8") {
-        exclude group: 'org.hamcrest', module: 'hamcrest-core'
-    }
-}
-
 def jvmTestFlags = ['-ea']
 
 idea {
     project {
-        languageLevel = 'JDK_1_7'
+        languageLevel = 'JDK_1_8'
 
         ipr {
             withXml { provider ->
